Updated AMD APPSDK environment settings/defaults

--- a/example/Makefile
+++ b/example/Makefile
@@ -1,10 +1,10 @@
 PWD = $(shell pwd)
 NVIDIA_SDK_INSTALL_PATH ?= /usr/local/cuda
-ATISTREAMSDKROOT ?= /usr/local/ati
+AMDAPPSDKROOT ?= /opt/AMDAPP
 
 TARGET = clfft_example
 
-CXXFLAGS += -O3 -Wall -g -I$(NVIDIA_SDK_INSTALL_PATH)/OpenCL/common/inc -I$(ATISTREAMSDKROOT)/include -I../include
+CXXFLAGS += -O3 -Wall -g -I$(NVIDIA_SDK_INSTALL_PATH)/OpenCL/common/inc -I$(AMDAPPSDKROOT)/include -I../include
 LDFLAGS += $(PWD)/../lib/libclfft.a
 
 OS = $(shell uname -s)
@@ -13,7 +13,7 @@ ifeq ($(OS), Darwin)
 	LDFLAGS += -framework OpenCL
 	LDFLAGS += -framework Accelerate
 else
-	LDFLAGS += -L$(ATISTREAMSDKROOT)/lib/$(ARCH)
+	LDFLAGS += -L$(AMDAPPSDKROOT)/lib/$(ARCH)
 	LDFLAGS += -lOpenCL
 endif
 
