--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,7 @@
 NVIDIA_SDK_INSTALL_PATH ?= /usr/local/cuda
 AMDAPPSDKROOT ?= /opt/AMDAPP
+CXX ?= g++
+AR ?= ar
 
 TARGET = libclfft.a
 
@@ -13,18 +15,18 @@ OBJECTS = fft_setup.o fft_execute.o fft_kernelstring.o
 
 
 $(TARGET): $(OBJECTS)
-	ar rcs $(TARGET) $(OBJECTS)
+	$(AR) rcs $(TARGET) $(OBJECTS)
 	mkdir -p ../lib
 	cp $(TARGET) ../lib/
 
 fft_setup.o: fft_setup.cpp fft_internal.h fft_base_kernels.h
-	g++ $(CXXFLAGS) -c fft_setup.cpp
+	$(CXX) $(CXXFLAGS) -c fft_setup.cpp
 	
 fft_execute.o: fft_execute.cpp ../include/clFFT.h fft_internal.h
-	g++ $(CXXFLAGS) -c fft_execute.cpp
+	$(CXX) $(CXXFLAGS) -c fft_execute.cpp
 
 fft_kernelstring.o: fft_kernelstring.cpp ../include/clFFT.h fft_internal.h
-	g++ $(CXXFLAGS) -c fft_kernelstring.cpp
+	$(CXX) $(CXXFLAGS) -c fft_kernelstring.cpp
 
 clean:
 	rm -f *.o
