--- a/example/Makefile.mingw
+++ b/example/Makefile.mingw
@@ -2,11 +2,12 @@ PWD = $(shell pwd)
 NVIDIA_SDK_INSTALL_PATH ?= /usr/local/cuda
 AMDAPPSDKROOT ?= /opt/AMDAPP
 CXX ?= i586-mingw32msvc-g++
+ARCH ?= 32
 
 TARGET = clfft_example.exe
 
 CXXFLAGS += -O3 -Wall -g -I$(NVIDIA_SDK_INSTALL_PATH)/OpenCL/common/inc -I$(AMDAPPSDKROOT)/include -I../include -D_WIN32_WINDOWS=0x0410 -malign-double
-LDFLAGS += $(PWD)/../lib/libclfft.a ../lib/amd/win32/2.6/OpenCL.lib
+LDFLAGS += $(PWD)/../lib/libclfft.a ../lib/amd/win$(ARCH)/2.6/OpenCL.lib
 
 $(TARGET): main.cpp Makefile $(PWD)/../lib/libclfft.a
 	$(CXX) $(CXXFLAGS) main.cpp $(LDFLAGS) -o $(TARGET)
